# bakuman

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/examples/: event_sourcing.rs  simple_consumer.rs  simple_producer.rs
client/src/: consumer.rs  lib.rs  producer.rs  protocol.rs
docs/: reimplement_kafka.md
src/: broker.rs  main.rs
src/concurrency/: mod.rs  optimistic_lock.rs
src/model/: config.rs  message.rs  mod.rs  schema.rs  topic.rs
src/plugins/: example.rs  mod.rs  trait_def.rs
src/storage/: lsm.rs  mod.rs  object_store.rs
