[package]
name = "bakuman"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "2.0"
bytes = "1.4"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
aws-sdk-s3 = "1.83"
aws-config = "1.6"
jsonschema = "0.30"
futures = "0.3"
dashmap = "6.1"
tokio-stream = "0.1"
